language/move-prover/tests/sources/functional/marketcap_generic.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/marketcap_generic.move:68:10 ───
    │
 68 │          ensures sum_of_coins_invariant<X>();
    │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/marketcap_generic.move:61:6: deposit_invalid (entry)
    =     at tests/sources/functional/marketcap_generic.move:62:18: deposit_invalid
    =         coin_ref = <redacted>,
    =         check = <redacted>,
    =         value = <redacted>
    =     at tests/sources/functional/marketcap_generic.move:63:27: deposit_invalid
    =         coin_ref = <redacted>
    =     at tests/sources/functional/marketcap_generic.move:61:6: deposit_invalid (exit)
